--- a/index.html
+++ b/index.html
@@ -23,17 +23,27 @@
 				<!-- Menu -->
 
 				<!-- Banner -->
-					<section id="banner">
+				<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo">									<ul class="actions">
+								<a href="#" class="headshot"><img src="images/headshot_photoshop_full.png" alt="" /></a>
+							</ul></div>
 							<h2>Allen Faughn</h2>
 							<p>Full Stack Software Engineer</p>
 							<p>JavaScript | React.js | Redux | Express.js | Python | Flask | SQL | postgreSQL | HTML | CSS</p>
+							<p id="resume-plug">See my <a id='resume-link' href="https://docs.google.com/document/d/1cD2GBjoHV3fEKELJ29I58_JUvTmx6rrihZtBLYY9M50/edit?usp=sharing">Resumé</a> <i id='resume-pdf' class="fa-solid fa-file-pdf"></i></p>
 						</div>
 					</section>
 
 				<!-- Wrapper -->
 					<section id="wrapper">
+						<!-- Four -->
+							<section id="four" class="wrapper alt style1">
+								<div class="inner">
+									<h2 class="major">About Me</h2>
+									<p>I got my start in programming during high school. My first foray into coding was making .Lua scripts for <a href="https://store.steampowered.com/app/4000/Garrys_Mod/">Garry's Mod</a> (a Half-Life 2 Modification turned into an entire seperate title). After high school I pursued a computer science degree at Murray State University. Due to financial complications as well as a lack of desire to partake in courses unrelated to my degree, I pursued my education at the bootcamp, App Academy. For 8 months I honed my craft anywhere between 60-80 hours a week, and I can say it was worth it. Today I am a Full Stack SWE and well-versed and knowledgeable in Javascript, React / Redux, Python, Flask, Express, SQL, and postgreSQL.</p>
+								</div>
+							</section>
 
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
@@ -71,16 +81,6 @@
 								</div>
 							</section>
 
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">About Me</h2>
-									<p>I got my start in programming during high school. My first foray into coding was making .Lua scripts for <a href="https://store.steampowered.com/app/4000/Garrys_Mod/">Garry's Mod</a> (a Half-Life 2 Modification turned into an entire seperate title). After high school I pursued a computer science degree at Murray State University. Due to financial complications as well as a lack of desire to partake in courses unrelated to my degree, I pursued my education at the bootcamp, App Academy. For 8 months I honed my craft anywhere between 60-80 hours a week, and I can say it was worth it. Today I am a Full Stack SWE and well-versed and knowledgeable in Javascript, React / Redux, Python, Flask, Express, SQL, and postgreSQL.</p>
-									<ul class="actions">
-										<a href="#" class="headshot"><img src="images/headshot_photoshop_full.png" alt="" /></a>
-									</ul>
-								</div>
-							</section>
 
 					</section>
 
